@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2006-06-25 patrick  Added support for building universal binaries on Mac OS X.
+                    NEW VERSION: 1.1.23
 2006-05-23 patrick  Applied versioning to the header and data directories.
                     NEW VERSION: 1.1.22
 2006-05-23 patrick  Changed the static and shared library names to include the
